<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.FiltersFragment">

    <TextView
            android:id="@+id/textViewFilters"
            android:text="@string/filters"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back"
            android:background="@null"
            android:layout_marginStart="20dp" tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:contentDescription="back button"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textViewFilters"
            android:layout_marginTop="30dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginStart="24dp" android:id="@+id/linearLayout">
        <TextView
                android:text="@string/genre"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewGenre"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerGenre"
                android:background="@drawable/ic_spinner_background"
                android:entries="@array/genres"
                android:textColor="@color/white"

                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto_bold"
                tools:ignore="TouchTargetSizeCheck"/>
        <TextView
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewRating"
        />
        <SeekBar
                android:max="100"
                android:min="0"
                android:progress="1"
                android:thumb="@drawable/ic_seekbar_thumb"
                android:progressDrawable="@drawable/custom_seekbar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarRating"/>
        <TextView
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewYear"
        />
        <SeekBar
                android:max="2023"
                android:min="1888"
                android:progress="1"
                android:thumb="@drawable/ic_seekbar_thumb"
                android:progressDrawable="@drawable/custom_seekbar"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarYear"/>
        <TextView
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewCountry"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerCountry"
                android:background="@drawable/ic_spinner_background"
                android:entries="@array/countries"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto_bold"
                tools:ignore="TouchTargetSizeCheck"/>
        <TextView
                android:text="@string/MPAA"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewMPAA"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerMPAA"
                android:background="@drawable/ic_spinner_background"
                android:entries="@array/mpaas"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto_bold"
                tools:ignore="TouchTargetSizeCheck"/>
        <TextView
                android:text="@string/key_word"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/roboto_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textViewKeyword"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:id="@+id/editTextKeyword" tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:textColor="@color/white"
                android:background="@drawable/ic_edittext_background"
                android:importantForAutofill="no"
        />
    </LinearLayout>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/applyFiltersButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="20dp"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_bold"
            android:background="@color/mild_yellow"/>

</androidx.constraintlayout.widget.ConstraintLayout>
