<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:layout_editor_absoluteY="1dp"
        tools:layout_editor_absoluteX="1dp" tools:ignore="SpeakableTextPresentCheck"
        android:background="@color/black"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DescriptionFragment"
    >

        <ImageView
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="430dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="1dp"
                android:src="@drawable/star_wars"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/poster"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster">
        </ImageView>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="434dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="1dp"
                android:background="@drawable/ic_poster_gradient"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/gradient_bottom"
                app:layout_constraintHorizontal_bias="0.0">
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="1dp"
                android:background="@drawable/ic_poster_gradient_top"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/gradient_top">
        </LinearLayout>
        <TextView
                android:text="@string/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/movieName"
                app:layout_constraintTop_toBottomOf="@+id/poster" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent" app:fontFamily="sans-serif-bold"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="#FFFFFF"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/back_button" android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_back"
                android:background="@null"
                android:layout_marginStart="20dp" tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"/>
        <ImageButton
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="0dp" android:id="@+id/save_button" android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/movieName"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_save_button" android:contentDescription="@string/save"
                android:background="@null"
                tools:ignore="TouchTargetSizeCheck"/>
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ratingBar"
                android:layout_marginTop="8dp"
                android:color="@color/white"

                android:rating="5"
                android:progressTint="@color/mild_yellow"
                app:layout_constraintTop_toBottomOf="@+id/movieName" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" tools:ignore="SpeakableTextPresentCheck"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewDescription"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" android:layout_marginTop="15dp"
                android:text="@string/movie_description"
                android:textColor="@color/white"
                android:textSize="14sp" app:fontFamily="sans-serif-italic" android:paddingLeft="24dp"
                android:paddingRight="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>